<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbars="vertical"
    tools:context=".ResultActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        >
        <ImageView
            android:id="@+id/frontSideCardImage"
            android:layout_width="160dp"
            android:layout_height="95dp"
            android:contentDescription="@string/front_captured_image"
            android:scaleType="fitXY" />

        <ImageView
            android:id="@+id/backSideCardImage"
            android:layout_width="160dp"
            android:layout_height="95dp"
            android:layout_marginStart="10dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/back_captured_image" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/faceImages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/faceImage"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:adjustViewBounds="true"
                android:padding="10dp"
                android:scaleType="centerInside"
                android:contentDescription="@string/face_image_preview" />

            <ImageView
                android:id="@+id/faceImageCaptured"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:adjustViewBounds="true"
                android:padding="10dp"
                android:scaleType="centerInside"
                android:contentDescription="@string/captured_face_image_preview" />

        </LinearLayout>

        <ImageView
            android:id="@+id/signatureImage"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/faceImages"
            android:scaleType="fitXY"
            android:contentDescription="@string/image_of_signature" />


        <Button
            android:id="@+id/buttonNFC"
            android:visibility="visible"
            android:text="@string/scan_echip"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:onClick="nfcPressed"
            tools:text="Scan eChip"
            android:layout_below="@+id/signatureImage" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewLicenseCardInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

</TableLayout>