<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".NfcConfirmationActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/mrz_read"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        android:text="@string/mrz_successfully_read"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/mrz_read"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/the_following_fields_were_extracted"/>

    <RelativeLayout
        android:id="@+id/relativeLayoutMRZ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:id="@+id/mrzDocumentNumberLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp">

            <TextView
                android:id="@+id/mrzDocumentNumberLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="60"
                android:padding="5dp"
                android:background="@android:color/transparent"
                android:text="@string/document_number_label"
                android:labelFor="@id/mrzDocumentNumber"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/mrzDocumentNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:inputType="textCapCharacters"
                android:text=""
                android:textSize="16sp"
                android:textStyle="bold"
                android:importantForAutofill="no"
                tools:ignore="TextFields" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/mrzDOBLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mrzDocumentNumberLayout"
            android:padding="10dp"
            android:gravity="center">

            <TextView
                android:id="@+id/mrzDOBLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="60"
                android:padding="5dp"
                android:background="@android:color/transparent"
                android:text="@string/dob_label"
                android:textSize="16sp"
                android:textStyle="bold"
                android:labelFor="@id/mrzDOB"/>

            <EditText
                android:id="@+id/mrzDOB"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:inputType="number"
                android:text=""
                android:textSize="16sp"
                android:textStyle="bold"
                android:importantForAutofill="no" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/mrzDOELayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mrzDOBLayout"
            android:padding="10dp"
            android:gravity="center">

            <TextView
                android:id="@+id/mrzDOELabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="60"
                android:padding="5dp"
                android:background="@android:color/transparent"
                android:text="@string/doe_label"
                android:textSize="16sp"
                android:textStyle="bold"
                android:labelFor="@id/mrzDOE"/>

            <EditText
                android:id="@+id/mrzDOE"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:inputType="number"
                android:text=""
                android:textSize="16sp"
                android:textStyle="bold"
                android:importantForAutofill="no" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/mrzInstructionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mrzDOELayout"
            android:padding="10dp"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/mrzInstruction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verify_captured_data"
                android:gravity="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mrzInstruction2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:gravity="center"
                android:textSize="16sp"/>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:paddingBottom="15dp">

        <Button
            android:id="@+id/eChipButton"
            android:onClick="nfcPressed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_echip"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/nfc_progress_layout"
        android:gravity="center"
        android:orientation="vertical"
        android:background="#FFFFFFFF"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:translationZ="2dp">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/nfc_pbText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="6dp"
            android:layout_marginTop="8dp"/>

    </LinearLayout>

</RelativeLayout>