<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.acuant.sampleapp.MainActivity"
    android:id="@+id/main_layout">

<!--    <Button-->
<!--        android:id="@+id/main_face_capture"-->
<!--        android:gravity="center"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        android:layout_margin="30dp"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:onClick="faceCaptureClicked"-->
<!--        android:text="@string/face_capture_button_text"/>-->

    <Button
        android:id="@+id/main_id_passport"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="idPassPortClicked"
        android:text="@string/id_passport_button_text"/>

    <Button
        android:id="@+id/main_health_card"
        android:layout_margin="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/health_insurance_button_text"
        android:onClick="healthInsuranceClicked"
        app:layout_constraintTop_toBottomOf="@id/main_id_passport">
    </Button>

    <Switch
        android:layout_margin="30dp"
        android:id="@+id/autoCaptureSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auto_capture"
        android:checked="true"
        app:layout_constraintTop_toBottomOf="@id/main_health_card"
        />

    <Spinner
        android:layout_margin="30dp"
        android:id="@+id/livenessSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/autoCaptureSwitch"
        />

    <LinearLayout
        android:id="@+id/main_progress_layout"
        android:gravity="center"
        android:orientation="vertical"
        android:background="#CCFFFFFF"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:translationZ="2dp">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/pbText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="8dp"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
